--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'groovy'
 }
 
 group 'com.example.testfixturepatterns'
@@ -14,6 +15,8 @@ repositories {
 dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter:5.5.2')
     testImplementation('org.hamcrest:hamcrest-core:2.2')
+    testImplementation('org.codehaus.groovy:groovy-all:2.5.8')
+    testImplementation('org.spockframework:spock-core:1.3-groovy-2.5')
 }
 
 test {
